refactor(data-dashboard): return typed Row DTOs from mappers
Replace every Map<String, Object> / List<Map<String, Object>> mapper
return with a dedicated Row DTO under entity/bo/dashboard/, and switch
XML aliases to camelCase so MyBatis auto-maps fields without
resultMap plumbing. The service layer now consumes typed getters
instead of string-keyed map lookups with manual casts.

Also type the alert page endpoint: POST /dashboard/alert/page now
accepts an AlertPageQuery body and returns Page<AlertItemVO>, dropping
the hand-rolled Integer.parseInt / Long.parseLong body parsing and
aligning the JSON shape with every other list endpoint.